--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <style>
       body {
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Inter', sans-serif;
         transition: background-color 0.3s, color 0.3s;
       }
 
       body.dark {
-        background-color: #111827; /* Proper dark background */
-        color: #e5e5e5;             /* Light text for dark mode */
+        background-color: #ffffff; /* White background */
+        color: #111827;             /* Black text */
       }
 
       body.light {
-        background-color: #ffffff; /* Light background */
-        color: #111827;             /* Dark text for light mode */
+        background-color: #ffffff; /* White background */
+        color: #111827;             /* Black text */
       }
 
       nav.sticky-nav a {
@@ -34,7 +34,8 @@
       }
 
       header {
-        background-color: #1f2937;
+        background-color: #001f3d; /* Navy Blue header */
+        color: #ffffff;
       }
 
       #hamburger {
