--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
     <main class="max-w-4xl mx-auto px-6 py-12 space-y-20">
       <section id="about" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-4">About</h2>
-        <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
+        <p>Hi There !<p>
+          </p> Accidental Banker but Product professional by choice<p>
+            </p> I am a Product Manager currently working for India's largest Private sector Bank, with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
+      </p> In the past I have worked along with reputed Institutions some of which are Tata trusts, Zomato, Indicold helping them achieve their desired product experiences.</p>
       </section>
 
       <section id="projects" data-aos="fade-up">
