--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <p class="text-base md:text-lg mt-1 text-white opacity-90">Building financial products for B2B and B2C</p>
         </div>
         <div>
-          <img src="profile.jpeg" alt="Sachin Gupta" class="w-14 h-14 md:w-16 md:h-16 rounded-full border-2 border-white shadow-lg object-cover"/>
+          <img src="profile.jpeg" alt="Sachin Gupta" class="w-20 h-20 rounded-full border-2 border-white shadow-lg object-cover"/>
         </div>
       </div>
     </header>
