--- a/index.html
+++ b/index.html
@@ -286,14 +286,14 @@
       <div class="hero-content">
         <p class="hero-subtitle">Hi, my name is</p>
         <h1 class="hero-title">Sachin Gupta.</h1>
-        <h2 class="hero-title" style="color: var(--dark-slate)">I build financial products.</h2>
+        <h2 class="hero-title" style="color: var(--dark-slate)">And I build financial products.</h2>
         <p class="hero-description">
           I'm a Product Manager specializing in building financial products for both B2B and B2C segments. 
           Currently, I'm focused on designing scalable systems and seamless user experiences at India's largest 
           private sector bank.
         </p>
         <a href="#contact" class="border border-secondary text-secondary px-6 py-3 rounded hover:bg-secondary/10 transition">
-          Get In Touch
+          Let's Get In Touch
         </a>
       </div>
     </section>
@@ -322,7 +322,7 @@
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> UX Design</li>
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> Data Analytics</li>
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> Agile Methodologies</li>
-            <li><i class="fas fa-caret-right text-secondary mr-2"></i> Financial Systems</li>
+            <li><i class="fas fa-caret-right text-secondary mr-2"></i> Financial Systems like LOS and LMS</li>
           </ul>
         </div>
         <div class="flex justify-center items-start">
@@ -345,7 +345,7 @@
             <div class="absolute -left-10 top-1 w-3 h-3 rounded-full bg-secondary"></div>
             <h3 class="text-lightest-slate">Product Manager</h3>
             <p class="text-secondary">India's Largest Private Sector Bank</p>
-            <p class="text-sm text-slate">2020 - Present</p>
+            <p class="text-sm text-slate">2023 - Present</p>
             <ul class="mt-4 space-y-2">
               <li class="flex items-start">
                 <i class="fas fa-caret-right text-secondary mr-2 mt-1"></i>
@@ -353,7 +353,7 @@
               </li>
               <li class="flex items-start">
                 <i class="fas fa-caret-right text-secondary mr-2 mt-1"></i>
-                <span>Redesigned legacy loan origination system into a modular platform</span>
+                <span>Redesigned legacy loan origination system into a modular platform a 0-100 Journey</span>
               </li>
               <li class="flex items-start">
                 <i class="fas fa-caret-right text-secondary mr-2 mt-1"></i>
@@ -381,10 +381,10 @@
           <p>Enabled the bank's first vertical using UIDAI API, saving over ₹12L annually.</p>
         </div>
         <div class="project-card">
-          <h3>Decommissioning Legacy LOS</h3>
+          <h3>Decommissioning Legacy LOS and Gen AI Integration</h3>
           <p>
             Spearheaded the redesign of a rigid Loan Origination System into a modular platform 
-            integrated with LMS, Collection, and API systems.
+            integrated with LMS, Collection, and API systems. While the work of Integration of Regex and multiple GenAI enhancments is WIP.
           </p>
           <p class="project-outcome">Outcome:</p>
           <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
@@ -441,7 +441,7 @@
         <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
       <p>Designed & Built by Sachin Gupta</p>
-      <p class="text-xs mt-2">Inspired by Brittany Chiang</p>
+      <p class="text-xs mt-2">Inspired by Brittany</p>
     </footer>
 
     <script>
