--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           financial services. If you have a project that could use my expertise or just want to say hi, 
           feel free to reach out!
         </p>
-        <a href="mailto:your.email@example.com" class="border border-secondary text-secondary px-6 py-3 rounded hover:bg-secondary/10 transition inline-block">
+        <a href="mailto:ceofrontlane@gmail.com" class="border border-secondary text-secondary px-6 py-3 rounded hover:bg-secondary/10 transition inline-block">
           Say Hello
         </a>
       </div>
@@ -437,7 +437,7 @@
     <footer>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/sachinguptanxt/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/nefarious-sachin" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
       <p>Designed & Built by Sachin Gupta</p>
