--- a/index.html
+++ b/index.html
@@ -261,6 +261,24 @@
         .hero-title {
           font-size: 2.5rem;
         }
+
+        /* New mobile padding fixes */
+        .hero-content,
+        section {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+        
+        .project-grid {
+          grid-template-columns: 1fr;
+          padding: 0 15px;
+        }
+        
+        #affiliations,
+        #academic {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
       }
     </style>
   </head>
@@ -273,6 +291,7 @@
           <a href="#about">About</a>
           <a href="#experience">Experience</a>
           <a href="#projects">Projects</a>
+          <a href="#affiliations">Affiliations</a>
           <a href="#contact">Contact</a>
         </div>
         <div class="hamburger">
@@ -286,14 +305,14 @@
       <div class="hero-content">
         <p class="hero-subtitle">Hi, my name is</p>
         <h1 class="hero-title">Sachin Gupta.</h1>
-        <h2 class="hero-title" style="color: var(--dark-slate)">And I build financial products.</h2>
+        <h2 class="hero-title" style="color: var(--dark-slate)">I build financial products.</h2>
         <p class="hero-description">
           I'm a Product Manager specializing in building financial products for both B2B and B2C segments. 
           Currently, I'm focused on designing scalable systems and seamless user experiences at India's largest 
           private sector bank.
         </p>
         <a href="#contact" class="border border-secondary text-secondary px-6 py-3 rounded hover:bg-secondary/10 transition">
-          Let's Get In Touch
+          Get In Touch
         </a>
       </div>
     </section>
@@ -322,7 +341,7 @@
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> UX Design</li>
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> Data Analytics</li>
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> Agile Methodologies</li>
-            <li><i class="fas fa-caret-right text-secondary mr-2"></i> Financial Systems like LOS and LMS</li>
+            <li><i class="fas fa-caret-right text-secondary mr-2"></i> Financial Systems</li>
           </ul>
         </div>
         <div class="flex justify-center items-start">
@@ -345,7 +364,7 @@
             <div class="absolute -left-10 top-1 w-3 h-3 rounded-full bg-secondary"></div>
             <h3 class="text-lightest-slate">Product Manager</h3>
             <p class="text-secondary">India's Largest Private Sector Bank</p>
-            <p class="text-sm text-slate">2023 - Present</p>
+            <p class="text-sm text-slate">2020 - Present</p>
             <ul class="mt-4 space-y-2">
               <li class="flex items-start">
                 <i class="fas fa-caret-right text-secondary mr-2 mt-1"></i>
@@ -353,7 +372,7 @@
               </li>
               <li class="flex items-start">
                 <i class="fas fa-caret-right text-secondary mr-2 mt-1"></i>
-                <span>Redesigned legacy loan origination system into a modular platform a 0-100 Journey</span>
+                <span>Redesigned legacy loan origination system into a modular platform</span>
               </li>
               <li class="flex items-start">
                 <i class="fas fa-caret-right text-secondary mr-2 mt-1"></i>
@@ -381,10 +400,10 @@
           <p>Enabled the bank's first vertical using UIDAI API, saving over ₹12L annually.</p>
         </div>
         <div class="project-card">
-          <h3>Decommissioning Legacy LOS and Gen AI Integration</h3>
+          <h3>Decommissioning Legacy LOS</h3>
           <p>
             Spearheaded the redesign of a rigid Loan Origination System into a modular platform 
-            integrated with LMS, Collection, and API systems. While the work of Integration of Regex and multiple GenAI enhancments is WIP.
+            integrated with LMS, Collection, and API systems.
           </p>
           <p class="project-outcome">Outcome:</p>
           <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
@@ -401,7 +420,7 @@
       </div>
     </section>
 
-    <!-- Affiliations Section -->
+    <!-- Industry Affiliations Section -->
     <section id="affiliations" data-aos="fade-up">
       <div class="section-title">
         <h2>Industry Affiliations</h2>
@@ -413,6 +432,22 @@
         <img src="logo-indicold.png" alt="Indicold" />
         <img src="logo-unacademy.png" alt="Unacademy" />
         <img src="logo-tata-trusts.png" alt="Tata Trusts" />
+        <img src="logo-big-league.png" alt="The Big League" />
+      </div>
+    </section>
+
+    <!-- Academic Affiliations Section -->
+    <section id="academic" data-aos="fade-up">
+      <div class="section-title">
+        <h2>Academic Affiliations</h2>
+      </div>
+      <div class="logo-grid">
+        <img src="irma.png" alt="IRMA" />
+        <img src="logo-svpuat.jpeg" alt="SVPUAT" />
+        <img src="logo-university-illinois.png" alt="University of Illinois" />
+      </div>
+      <div class="mt-8 text-center">
+        <p class="text-slate">Additional coursework and certifications from leading institutions</p>
       </div>
     </section>
 
@@ -427,7 +462,7 @@
           financial services. If you have a project that could use my expertise or just want to say hi, 
           feel free to reach out!
         </p>
-        <a href="mailto:ceofrontlane@gmail.com" class="border border-secondary text-secondary px-6 py-3 rounded hover:bg-secondary/10 transition inline-block">
+        <a href="mailto:your.email@example.com" class="border border-secondary text-secondary px-6 py-3 rounded hover:bg-secondary/10 transition inline-block">
           Say Hello
         </a>
       </div>
@@ -437,11 +472,11 @@
     <footer>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/sachinguptanxt/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://github.com/nefarious-sachin" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
       <p>Designed & Built by Sachin Gupta</p>
-      <p class="text-xs mt-2">Inspired by Brittany</p>
+      <p class="text-xs mt-2">Inspired by Brittany Chiang</p>
     </footer>
 
     <script>
