--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
       <div class="hero-content">
         <p class="hero-subtitle">Hi, my name is</p>
         <h1 class="hero-title">Sachin Gupta.</h1>
-        <h2 class="hero-title"><span class="financial-highlight">I build financial products.</span></h2>
+        <h2 class="hero-title"><span class="financial-highlight">And I build financial products.</span></h2>
         <p class="hero-description">
           I'm a Product Manager specializing in building financial products for both B2B and B2C segments. 
-          Currently, I'm focused on designing scalable systems and seamless user experiences at India's largest 
+          Currently, I'm focused on designing scalable systems and seamless user experiences at HDFC, India's largest 
           private sector bank.
         </p>
         <a href="#contact" class="border border-secondary text-secondary px-6 py-3 rounded hover:bg-secondary/10 transition">
@@ -370,8 +370,8 @@
           </p>
           <ul class="grid grid-cols-2 gap-2 mt-4">
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> Product Strategy</li>
-            <li><i class="fas fa-caret-right text-secondary mr-2"></i> API Integration</li>
-            <li><i class="fas fa-caret-right text-secondary mr-2"></i> UX Design</li>
+            <li><i class="fas fa-caret-right text-secondary mr-2"></i> SDLC</li>
+            <li><i class="fas fa-caret-right text-secondary mr-2"></i> UX/UI Design</li>
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> Data Analytics</li>
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> Agile Methodologies</li>
             <li><i class="fas fa-caret-right text-secondary mr-2"></i> Financial Systems</li>
@@ -389,23 +389,23 @@
     <!-- Experience Section -->
     <section id="experience" data-aos="fade-up">
       <div class="section-title">
-        <h2>Where I've Worked</h2>
+        <h2>Currently working In and as</h2>
       </div>
       <div class="mt-8">
         <div class="border-l border-dark-slate pl-8">
           <div class="relative pb-8">
             <div class="absolute -left-10 top-1 w-3 h-3 rounded-full bg-secondary"></div>
             <h3 class="text-lightest-slate">Product Manager</h3>
-            <p class="text-secondary">India's Largest Private Sector Bank</p>
-            <p class="text-sm text-slate">2020 - Present</p>
+            <p class="text-secondary">HDFC Bank Ltd.</p>
+            <p class="text-sm text-slate">2023 - Present</p>
             <ul class="mt-4 space-y-2">
               <li class="flex items-start">
                 <i class="fas fa-caret-right text-secondary mr-2 mt-1"></i>
-                <span>Led the integration of UIDAI's eKYC API into the bank's onboarding flow</span>
+                <span>Led the integration of Borrower Authentication API's into the bank's onboarding flow</span>
               </li>
               <li class="flex items-start">
                 <i class="fas fa-caret-right text-secondary mr-2 mt-1"></i>
-                <span>Redesigned legacy loan origination system into a modular platform</span>
+                <span>Redesigned legacy loan origination system (LOS) into a modular and flexible platform</span>
               </li>
               <li class="flex items-start">
                 <i class="fas fa-caret-right text-secondary mr-2 mt-1"></i>
@@ -420,23 +420,24 @@
     <!-- Projects Section -->
     <section id="projects" data-aos="fade-up">
       <div class="section-title">
-        <h2>Some Things I've Built</h2>
+        <h2>Some Things I've helped built</h2>
       </div>
       <div class="project-grid">
         <div class="project-card">
           <h3>UIDAI eKYC Integration</h3>
           <p>
             Integrated UIDAI's eKYC API into the bank's onboarding flow for real-time borrower authentication. 
-            Led API design, built secure ADV storage, and overcame regulatory challenges.
+            Led API design, built secure ADV storage and data recon, and overcame regulatory challenges.
           </p>
           <p class="project-outcome">Outcome:</p>
-          <p>Enabled the bank's first vertical using UIDAI API, saving over ₹12L annually.</p>
+          <p>Enabled the bank's first vertical using authentication APIs, saving over ₹12L annually.</p>
         </div>
         <div class="project-card">
-          <h3>Decommissioning Legacy LOS</h3>
+          <h3>Decommissioning Legacy LOS and Gen AI Integration</h3>
           <p>
             Spearheaded the redesign of a rigid Loan Origination System into a modular platform 
             integrated with LMS, Collection, and API systems.
+            Working on the integration of gen AI modules in the onbaording journey to lower the TAT and smoother workflow.
           </p>
           <p class="project-outcome">Outcome:</p>
           <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
@@ -505,8 +506,8 @@
     <footer>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/sachinguptanxt/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/nefarious-sachin" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/sachin_gupta_1" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
       <p>Designed & Built by Sachin Gupta</p>
       <p class="text-xs mt-2">Inspired by Brittany Chiang</p>
