--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
           financial services. If you have a project that could use my expertise or just want to say hi, 
           feel free to reach out!
         </p>
-        <a href="mailto:your.email@example.com" class="border border-secondary text-secondary px-6 py-3 rounded hover:bg-secondary/10 transition inline-block">
+        <a href="mailto:ceofrontlane@gmail.com" class="border border-secondary text-secondary px-6 py-3 rounded hover:bg-secondary/10 transition inline-block">
           Say Hello
         </a>
       </div>
